--- a/PaymentProcessor.Api/PaymentProcessor.Api.csproj
+++ b/PaymentProcessor.Api/PaymentProcessor.Api.csproj
@@ -1,11 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="PaymentProcessorMapper\**" />
+    <Content Remove="PaymentProcessorMapper\**" />
+    <EmbeddedResource Remove="PaymentProcessorMapper\**" />
+    <None Remove="PaymentProcessorMapper\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\PaymentProcessor.Models.DTO\PaymentProcessor.Models.DTO.csproj" />
     <ProjectReference Include="..\PaymentProcessor.Models.Entity\PaymentProcessor.Models.Entity.csproj" />
+    <ProjectReference Include="..\PaymentProcessor.Services\PaymentProcessor.Services.csproj" />
   </ItemGroup>
 
 
